# automotive-regulations-rag

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  app.py  citation_audit.py  diagnose_judge.py  diagnose_judge2.py  judge_sanity.py  make_sample.py  probe_faithfulness.py  pyproject.toml  smoke_eval.py  smoke_test.py
.claude/: settings.json
.github/workflows/: ci.yml
data/raw/: SOURCES.md
docs/: architecture.md  v1-spec.md
evals/: fill_pages.py  fill_parent_headings.py  find_chunks.py  patch_synth006.py  run.py  sample_eval_set.json  v1_eval_set.json  v1_eval_set.json.bak2  v1_eval_set.json.bak3  view_eval.py
src/: embed_index.py  parse_fmvss.py
src/automotive_regulations_rag/: __init__.py
src/compliance_rag/: config.py  generate.py  pipeline.py  retrieve.py
src/compliance_rag/eval/: harness.py  scoring.py  scoring.py.bak
src/compliance_rag/llm/: anthropic_client.py  base.py  factory.py
tests/: test_smoke.py
